# vm_tool

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  Readme.md  codePushToGithub.py  codePushToGithub.sh  inventory.yml  jingo.code-workspace  mkdocs.yml  push_to_pypi.sh  pyproject.toml  requirements-docs.txt  requirements.txt  run.py  sample.py  setup.py  setup.yml  test.py  vercel.json
.agent/workflows/: push.md  test_and_lint.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  publish.yml  release.yml
docker/: create_docker_service.yml  install_docker_and_compose.yml
docs/: MODULE_GUIDE.md  deployment-approaches.md  ec2-github-actions-guide.md  features.md  generator.md  index.md  pipeline-generator.md  ssh-key-setup.md  strategies.md  usage.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: health-checks.md  kubernetes.md  secrets.md
docs/reference/: architecture.md  cli.md  runner.md  ssh.md
examples/: README.md  __init__.py  deploy_full_setup.py  docker-compose.example.yml  ec2-setup.sh  github-actions-ec2.yml  github-actions-full-setup.yml  production-deploy.sh  rollback.sh  setup.sh  ssh_key_management.py  version_check.sh
examples/cloud/: README.md  __init__.py  ssh_identity_file.py  ssh_password.py  template_cloud_setup.py
examples/local/: .keep  README.md  __init__.py  template_local_setup.py
molecule/default/: converge.yml  molecule.yml  verify.yml
tests/: conftest.py  test_ansible_runner.py  test_cloud_setup.py  test_config.py  test_docker_deploy.py  test_generator.py  test_health.py  test_history.py  test_k8s_deploy.py  test_logging.py  test_provision.py  test_runner.py  test_ssh.py  test_state.py
tests/integration/: test_deployment.py
vm_tool/: __init__.py  alerting.py  audit.py  backup.py  benchmarking.py  cli.py  cloud.py  compliance.py  config.py  console.py  drift.py  generator.py  health.py  history.py  kubernetes.py  notifications.py  plugins.py  policy.py  rbac.py  recovery.py  release.py  runner.py  secrets.py  ssh.py  ssh_setup.py  state.py
vm_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vm_tool/config/: __init__.py  config.py
vm_tool/core/: __init__.py  ansible.py  history.py  runner.py  state.py
vm_tool/deploy/: __init__.py  backup.py  drift.py  health.py
vm_tool/deploy/strategies/: __init__.py  ab_testing.py  blue_green.py  canary.py
vm_tool/handlers/: config.py  deploy.py  ops.py  setup.py  tools.py
vm_tool/infra/: __init__.py  cloud.py  kubernetes.py  ssh.py
vm_tool/integrations/: __init__.py  benchmarking.py  webhooks.py
vm_tool/observability/: __init__.py  alerting.py  metrics.py  reporting.py
vm_tool/provision/: __init__.py  core.py
vm_tool/provision/modules/aws/: main.tf
vm_tool/security/: __init__.py  compliance.py  policy.py  rbac.py  recovery.py
vm_tool/src/: setup_runner.py
vm_tool/strategies/: __init__.py  ab_testing.py  blue_green.py  canary.py
vm_tool/tools/: __init__.py  completion.py  generator.py  validation.py
vm_tool/vm_setup/: cleanup.yml  cloud_inventory.yml  dynamic_inventory.yml  k8s.yml  k8s_deploy.yml  main.yml  monitoring.yml  project_service.yml  push_code.yml  push_code_tasks.yml  setup.yml  setup_project_env.yml
vm_tool/vm_setup/docker/: create_docker_service.yml  docker_setup.yml  install_docker_and_compose.yml  login_to_docker_hub.yml
vm_tool/vm_setup/github/: git_configuration.yml
